# civetweb-scala

./: LICENSE  README.md  build.sbt
project/: plugins.sbt
src/main/scala/: Main.scala
src/main/scala/com/tarasovs/civetweb/: Bindings.scala  CivetWeb.scala
src/native/: CMakeLists.txt
